<?xml version="1.0" encoding="utf-8"?>
<keyboard-layouts xmlns:android="http://schemas.android.com/apk/res/android">
    <keyboard-layout android:name="keyboard_layout_gemini_us_remap_01" android:label="@string/keyboard_layout_gemini_us_remap_01" android:keyboardLayout="@raw/gemini_us_remap_01" />
    <keyboard-layout android:name="keyboard_layout_gemini_us_remap_02" android:label="@string/keyboard_layout_gemini_us_remap_02" android:keyboardLayout="@raw/gemini_us_remap_02" />
    <keyboard-layout android:name="keyboard_layout_gemini_us_remap_02f" android:label="@string/keyboard_layout_gemini_us_remap_02f" android:keyboardLayout="@raw/gemini_us_remap_02f" />
    <keyboard-layout android:name="keyboard_layout_gemini_us_remap_03" android:label="@string/keyboard_layout_gemini_us_remap_03" android:keyboardLayout="@raw/gemini_us_remap_03" />
    <keyboard-layout android:name="keyboard_layout_gemini_us_remap_04" android:label="@string/keyboard_layout_gemini_us_remap_04" android:keyboardLayout="@raw/gemini_us_remap_04" />
    <keyboard-layout android:name="keyboard_layout_gemini_us_remap_04_01" android:label="@string/keyboard_layout_gemini_us_remap_04_01" android:keyboardLayout="@raw/gemini_us_remap_04_01" />
    <keyboard-layout android:name="keyboard_layout_gemini_us_remap_05" android:label="@string/keyboard_layout_gemini_us_remap_05" android:keyboardLayout="@raw/gemini_us_remap_05" />
    <keyboard-layout android:name="keyboard_layout_gemini_us_remap_06" android:label="@string/keyboard_layout_gemini_us_remap_06" android:keyboardLayout="@raw/gemini_us_remap_06" />
    <keyboard-layout android:name="keyboard_layout_gemini_jp_remap_01" android:label="@string/keyboard_layout_gemini_jp_remap_01" android:keyboardLayout="@raw/gemini_jp_remap_01" />
</keyboard-layouts>
